force-app/main/default/objects/Recommendation_Log__c/Recommendation_Log__c.object-meta.xml
<CustomObject>
    <label>Recommendation Log</label>
    <nameField>
        <displayFormat>RCL-{0000000}</displayFormat>
        <label>Recommendation Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommendation Log</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>