force-app/main/default/objects/Recommendation_Log__c/fields/AAT_Review__c.field-meta.xml
<CustomField>
    <fullName>AAT_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AAT Review</label>
    <referenceTo>AAT_Review__c</referenceTo>
    <relationshipLabel>Recommendation Log</relationshipLabel>
    <relationshipName>Recommendation_Log</relationshipName>
    <type>Lookup</type>
</CustomField>