force-app/main/default/objects/Recommendation_Log__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application(Not in Use)</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Recommendation Log</relationshipLabel>
    <relationshipName>Recommendation_Log</relationshipName>
    <type>Lookup</type>
</CustomField>