force-app/main/default/objects/Recommendation_Log__c/fields/ApplicationId__c.field-meta.xml
<CustomField>
    <fullName>ApplicationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>BusinessLicenseApplication</referenceTo>
    <relationshipLabel>Recommendation Log</relationshipLabel>
    <relationshipName>Recommendation_Log</relationshipName>
    <type>Lookup</type>
</CustomField>