force-app/main/default/objects/Recommendation_Log__c/fields/Delegate__c.field-meta.xml
<CustomField>
    <fullName>Delegate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegate</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recommendation_Log_Delegate</relationshipName>
    <type>Lookup</type>
</CustomField>