force-app/main/default/objects/Recommendation_Log__c/fields/Reconsideration__c.field-meta.xml
<CustomField>
    <fullName>Reconsideration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reconsideration</label>
    <referenceTo>Reconsideration__c</referenceTo>
    <relationshipLabel>Recommendation Log</relationshipLabel>
    <relationshipName>Recommendation_Log</relationshipName>
    <type>Lookup</type>
</CustomField>